test/conformance/kuttl/validate/clusterpolicy/standard/enforce/api-initiated-pod-eviction/02-script.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: ./api-initiated-eviction.sh
