test/conformance/kuttl/validate/clusterpolicy/standard/enforce/api-initiated-pod-eviction/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny-evict-by-pod-label
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
